--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             var snh = document.getElementById('isenha').value
 
             if((eml == "luannbarbosalb@icloud.com") && (snh == 1234567)) {
-                window.location.href = "http://127.0.0.1:3000/principal.html"
+                window.location.href = "principal.html"
             } else {
                 document.writeln('Email ou senha errada')
             }
